Removed background nurse on small screens to prevent button over the eyes.

--- a/css/pl.css
+++ b/css/pl.css
@@ -134,7 +134,7 @@ nav {
 
 #twoCoreSolutions {
     background-size: 100% 100%; 
-    background: #ffffff url("../images/twoCore-background.png") no-repeat 50% 100%;
+    /*background: #ffffff url("../images/twoCore-background.png") no-repeat 50% 100%;*/
 }
 #twoCoreSolutions.left, #twoCoreSolutions.right {
     display: flex;
@@ -219,6 +219,7 @@ footer li a {
     main {
         padding: 0 0 0 0;
     }
+    
     #twoCoreSolutions h1 {
         font-size: 2.5em;
     }
@@ -253,6 +254,9 @@ footer li a {
     }
     #leverage h1 {
         font-size: 2.7em!important;
+    }
+    #twoCoreSolutions {
+        background: #ffffff url("../images/twoCore-background.png") no-repeat 50% 100%;
     }
     #twoCoreSolutions .left, #twoCoreSolutions .right {
         background-color: rgba(255, 255, 255, 0);
